--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pydantic = "^1.10.9"
 fastapi = "^0.97.0"
-sqlalchemy = "^2.0.16"
 uvicorn = "^0.22.0"
 asyncpg = "^0.27.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+alembic = "^1.11.1"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
+pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
+python-multipart = "^0.0.6"
 
 
 [build-system]
