--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,29 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.97.0"
 uvicorn = "^0.22.0"
 asyncpg = "^0.27.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 alembic = "^1.11.1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
-pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
 python-multipart = "^0.0.6"
+pytest = "^7.3.2"
+pytest-asyncio = "^0.21.0"
+fastapi = {extras = ["all"], version = "^0.97.0"}
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pute]
+[tool.pytest.ini_options  ]
+pythonpath = [
+  "."
+]
+asyncio_mode="auto"
+filterwarnings = [
+  "ignore::UserWarning",
+  "ignore::DeprecationWarning",
+]
