--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,24 @@ services:
     ports:
       - "${DB_PORT}:5432"
     expose:
-      - "${DB_PORT}"
+      - 5432
     environment:
       - POSTGRES_USERNAME=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
       - POSTGRES_DB:=${DB_NAME}
     volumes:
       - "db_data:/var/lib/postgresql/data"
+
+  redis:
+    image: redis:7.0-alpine
+    container_name: "redis"
+    restart: "always"
+    env_file:
+      - ".env"
+    expose:
+      - 6379
+    ports:
+      - "${REDIS_PORT}:6379"
   
   app:
     build:
@@ -29,6 +40,16 @@ services:
       - "8000"
     depends_on:
       - db
+
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - ".env"
+    command: ["/app/docker/celery.sh"]
+    depends_on:
+      - redis
 
 volumes:
   db_data:
