--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ python-multipart = "^0.0.6"
 pytest = "^7.3.2"
 pytest-asyncio = "^0.21.0"
 fastapi = {extras = ["all"], version = "^0.97.0"}
+redis = "^4.6.0"
+celery = "^5.3.1"
 
 
 [build-system]
